--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,16 @@ edition = "2021"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+codegen-units = 1
+lto = "fat"
+panic = "abort"
+strip = true
+
+[profile.profiling]
+debug = "full"
+inherits = "release"
+strip = false
 
 [dependencies]
+anyhow = "1.0.96"
