--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,20 @@
 [package]
-name = "rust-template"
-version = "0.1.0"
 edition = "2021"
 license = "MIT"
+name = "rust-template"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+codegen-units = 1
+lto = "fat"
+panic = "abort"
+strip = true
+
+[profile.profiling]
+debug = "full"
+inherits = "release"
+strip = false
 
 [dependencies]
+anyhow = "1.0.96"
