--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2024"
 license = "MIT"
-name = "{{project-name}}"
+name = "rust-template"
 version = "0.1.0"
 readme = "README.md"
 authors = ["{{author}} <{{email}}>"]
@@ -17,10 +17,6 @@ strip = true
 debug = "full"
 inherits = "release"
 strip = false
-
-[lib]
-name = "{{project-name}}"
-crate-type = ["{{crate_type}}"]
 
 [dependencies]
 anyhow = "1.0.97"
