--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -1,16 +1,22 @@
+# cargo-generate.toml
+
 [template]
-# 强制替换现有文件（谨慎使用）
-init = true
+# 排除模板开发专用的文件，保持生成项目的纯净
+exclude = ["cliff.toml", ".cursor/*"]
+
+# 默认情况下不覆盖文件，更加安全。
+# 如果确实需要覆盖，可以在运行时使用 `cargo generate --init` 参数。
+init = false
 
 [variables]
-# 作者姓名（默认值 + 提示）
-author = { type = "string", prompt = "author name", default = "Paxon Qiao" }
+# 项目名称：自动从目录名获取，无需用户输入
+project-name = { type = "string", prompt = false }
 
-# 作者邮箱（默认值，不提示）
-email = { type = "string", default = "qiaopengjun0@gmail.com" }
+# 作者姓名：提示用户输入，并提供一个默认值
+author = { type = "string", prompt = "What is your name?", default = "Paxon Qiao" }
 
-# GitHub 用户名（强制用户输入）
-github-username = { type = "string", prompt = "GitHub username", required = false, default = "qiaopengjun5162" }
+# 作者邮箱：提示用户输入，并提供一个默认值
+email = { type = "string", prompt = "What is your email?", default = "qiaopengjun0@gmail.com" }
 
-# 项目名称（从 git 仓库名自动推断）
-project-name = { type = "string", default = "{{project-name}}", prompt = false }
+# GitHub 用户名：提示用户输入，并提供一个默认值
+github-username = { type = "string", prompt = "What is your GitHub username?", default = "qiaopengjun5162" }
