--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,10 @@ jobs:
       - name: install nextest
         uses: taiki-e/install-action@nextest
       - uses: Swatinem/rust-cache@v2
-      # - name: Check code format
-      # run: cargo fmt --all -- --check
-      # - name: Check the package for errors
-      # run: cargo check --all
+      - name: Check code format
+        run: cargo fmt --all -- --check
+      - name: Check the package for errors
+        run: cargo check --all
       - name: Lint rust sources
         run: cargo clippy --all-targets --all-features --tests --benches -- -D warnings
       - name: Execute rust tests
