--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Check code format
         run: cargo fmt --all -- --check
+      - name: Install Taplo
+        run: cargo install taplo-cli
+      - name: Format TOML
+        run: taplo fmt --option reorder_keys=true --check
       - name: Check the package for errors
         run: cargo check --all
       - name: Lint rust sources
