--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = """
 documentation = "https://docs.rs/"
 edition = "2024"
 license = "MIT"
-name = "Rust Template"
+name = "rust-template"
 readme = "README.md"
 repository = "https://github.com/{{github-username}}/{{project-name}}"
 version = "0.1.0"
